--- a/cinema/film/templates/base.html
+++ b/cinema/film/templates/base.html
@@ -58,9 +58,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3 mt-auto">
-        <p class="mb-0">© 2025 Ciak Cinema - Via Roma 32, Modena - Tel. 338 2937 0553</p>
-    </footer>
+    {% include "footer.html" %}
     {% block extra_js %}{% endblock %}
 
     <!-- Bootstrap JS -->
