--- a/cinema/templates/footer.html
+++ b/cinema/templates/footer.html
@@ -14,7 +14,7 @@
             <!-- Colonna 2: Contatti -->
             <div class="col-md-4 mb-4">
                 <h5 class="text-warning">Contatti</h5>
-                <p>📍 Via Roma 32, Modena</p>
+                <p>📍 Via Vignolese 32, Modena</p>
                 <p>📞 338 2937 0553</p>
                 <p>📧 info@ciakcinema.it</p>
             </div>
