--- a/cinema/templates/base.html
+++ b/cinema/templates/base.html
@@ -34,7 +34,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav gap-3 fs-5">
+                <ul class="navbar-nav gap-3 fs-5">      <!-- Per l'utente moderatore gli diamo questo "dropdown"-->
+                    {% if request.user.is_authenticated and request.user.profiloutente.is_moderatore %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Moderazione</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'utenti:lista_commenti' %}">Commenti</a></li>
+                            <!-- Altri elementi verranno qui (discussioni, messaggi) -->
+                        </ul>
+                    </li>
+                    {% endif %}
+
                     {% if user.is_staff %}      <!-- Solo se utente staff mostriamo queste opzioni -->
                     <li class="nav-item dropdown">
                     <a class="nav-link text-white dropdown-toggle" href="#" id="gestioneDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,7 +53,9 @@
                     <ul class="dropdown-menu" aria-labelledby="gestioneDropdown">
                         <li><a class="dropdown-item" href="{% url 'film:film_create' %}">Aggiungi film</a></li>
                         <li><a class="dropdown-item" href="{% url 'film:film_list_modifica' %}">Modifica film</a></li>
-                        <!-- faremo lo stesso per le proiezioni -->
+                          <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="{% url 'film:proiezione_create' %}">Aggiungi proiezione</a></li>
+                        <li><a class="dropdown-item" href="{% url 'film:proiezione_list_modifica' %}">Modifica proiezione</a></li>
                     </ul>
                     </li>
                     {% endif %}             <!-- Il resto delle opzioni per tutti-->
@@ -53,15 +65,21 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Prenota</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Abbonati</a>
+                    <li class="nav-item">       <!-- Se utente loggato mostrerà l'opzione di abbonamento -->
+                    {% if user.is_authenticated %}
+                        <a class="nav-link text-white" href="{% url 'utenti:abbonati' %}">Abbonati</a>
+                    {% else %}
+                        <a class="nav-link text-white" href="{% url 'utenti:signup' %}?next={% url 'utenti:abbonati' %}">Abbonati</a>
+                    {% endif %}
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'utenti:lista_discussioni' %}">Forum</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contatti</a>
+                        <a class="nav-link text-white" href="{% url 'film:dove_siamo' %}">Dove siamo</a>
                     </li>
+
                     <!-- Qui la logica che riguarda il campo utente (se loggato/silver/gold)-->
                     {% if user.is_authenticated %}
                     {% with user.profiloutente.abbonamento as abbonamento %}
