--- a/cinema/film/templates/detail_film.html
+++ b/cinema/film/templates/detail_film.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container my-4">
-    <h1 class="mb-4 text-warning">{{ object.titolo }}</h1>
+    <h1 class="mb-4 text-warning">🎬{{ object.titolo }}</h1>
     
     <div class="row">
         <!-- Immagine poster (con load dinamico come nella home)-->
