--- a/cinema/utenti/templates/moderazione/commento_confirm_delete.html
+++ b/cinema/utenti/templates/moderazione/commento_confirm_delete.html
@@ -7,7 +7,7 @@
     <form method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Elimina</button>
-        <a href="{% url 'moderazione:lista_commenti' %}" class="btn btn-secondary">Annulla</a>
+        <a href="{% url 'utenti:seleziona_film' %}" class="btn btn-secondary">Annulla</a>
     </form>
 </div>
 {% endblock %}
