--- a/cinema/templates/base.html
+++ b/cinema/templates/base.html
@@ -70,14 +70,14 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'film:cerca_film' %}">Cerca Film</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Prenota</a>
+                     <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'prenotazioni:proiezioni-list' %}">Prenota</a>
                     </li>
                     <li class="nav-item">       <!-- Se utente loggato mostrerà l'opzione di abbonamento -->
                     {% if user.is_authenticated %}
-                        <a class="nav-link text-white" href="{% url 'utenti:abbonati' %}">Abbonati</a>
+                        <a class="nav-link text-warning" href="{% url 'utenti:abbonati' %}">Abbonati</a>
                     {% else %}
-                        <a class="nav-link text-white" href="{% url 'utenti:signup' %}?next={% url 'utenti:abbonati' %}">Abbonati</a>
+                        <a class="nav-link text-warning" href="{% url 'utenti:signup' %}?next={% url 'utenti:abbonati' %}">Abbonati</a>
                     {% endif %}
                     </li>
                     {% if user.is_authenticated%}
@@ -174,7 +174,10 @@ rgb(198, 192, 255)
 
     <!-- Footer incluso -->
     {% include "footer.html" %}
+
+    <!-- Inclusione di un potenziale script se serve -->
     {% block extra_js %}{% endblock %}
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
