--- a/cinema/film/templates/cerca_film.html
+++ b/cinema/film/templates/cerca_film.html
@@ -27,6 +27,9 @@
         </div>
     </form>
 
+    <h3 class="text-warning fw-semibold">Film raccomandati per te</h3>
+
+
         <!-- Qui stampo i vari film tramite "card" di bootstrap -->
         
     <div class="row">
