--- a/cinema/film/templates/home.html
+++ b/cinema/film/templates/home.html
@@ -51,7 +51,7 @@
     <div class="p-4 rounded-4 shadow-sm" style="background-color: #ffc107; color: #001f33;">
         <h2 class="mb-3 fw-semibold">Scopri il meglio del grande schermo</h2>
         <p class="mb-3">Ogni settimana nuove uscite, eventi speciali e promozioni. Vivi l’esperienza del cinema come non mai, con comfort e spettacolo garantiti.</p>
-        <a href="#" class="btn btn-dark">Prenota ora</a>
+        <a href="{% url 'prenotazioni:proiezioni-list' %}" class="btn btn-dark">Prenota ora</a>
     </div>
     </div>
 </div>
