--- a/cinema/film/templates/detail_film.html
+++ b/cinema/film/templates/detail_film.html
@@ -112,7 +112,7 @@
             {% for commento in commenti %}
                 <div class="list-group-item bg-secondary text-white mb-2 rounded">
                 {% if commento.utente.profiloutente.immagine_profilo %}    <!-- Se l'utente ha imgProfilo la mostriamo-->
-                                    <img src="{{ user.profiloutente.immagine_profilo.url }}" alt="Profilo" class="rounded-circle me-2" width="30" height="30">
+                                    <img src="{{ commento.utente.profiloutente.immagine_profilo.url }}" alt="Profilo" class="rounded-circle me-2" width="30" height="30">
                 {% endif %}    
                                     <strong>{{ commento.utente.username }}</strong> - 
                     <small class="text-muted">{{ commento.data_creazione|date:"d/m/Y H:i" }}</small>
